@@ -9,6 +9,7 @@
  393912 'cache article' processes selected articles in random order (Per Hedeland)
  395069 faster thread filtering
  395475 make the save dialog simpler and more consistent with other Gnome apps
+ 397409 remove unneeded temporary objects from Quark::to_view()
 
 0.120 "Plate of Shrimp"
  356329 'Save Attachments' only saves one of multiple attachments (Walt)
